--- a/en-GB.plg_system_k2redirector.ini
+++ b/en-GB.plg_system_k2redirector.ini
@@ -1,1 +1,8 @@
 PLG_SYSTEM_K2_REDIRECTOR_DESC="A simple plugin to selectively redirect K2 views to menu items. To use, you must first create the destination menu item that the K2 view will be redirected to. Once the menu item(s) are created, configure the K2 view options in this plugin to the corresponding menu items appropriately."
+PLG_SYSTEM_K2_REDIRECTOR_CATEGORY_VIEW_LABEL="K2 Category View"
+PLG_SYSTEM_K2_REDIRECTOR_USER_VIEW_LABEL="K2 User/Author View"
+PLG_SYSTEM_K2_REDIRECTOR_SEARCH_VIEW_LABEL="K2 Search View"
+PLG_SYSTEM_K2_REDIRECTOR_TAG_VIEW_LABEL="K2 Tag View"
+PLG_SYSTEM_K2_REDIRECTOR_DATE_VIEW_LABEL="K2 Date View"
+PLG_SYSTEM_K2_REDIRECTOR_SELECT_DESC="Select a menu item to redirect this view to. Leave it unchanged to not redirect this view"
+
