Adds not redirected option

--- a/en-GB.plg_system_k2redirector.ini
+++ b/en-GB.plg_system_k2redirector.ini
@@ -5,4 +5,4 @@ PLG_SYSTEM_K2_REDIRECTOR_SEARCH_VIEW_LABEL="K2 Search View"
 PLG_SYSTEM_K2_REDIRECTOR_TAG_VIEW_LABEL="K2 Tag View"
 PLG_SYSTEM_K2_REDIRECTOR_DATE_VIEW_LABEL="K2 Date View"
 PLG_SYSTEM_K2_REDIRECTOR_SELECT_DESC="Select a menu item to redirect this view to. Leave it unchanged to not redirect this view"
-
+PLG_SYSTEM_K2_REDIRECTOR_NOT_REDIRECTED="Not redirected"
