Adds configuration option for selecting categories, and their items, to redirect to a specific menu item

--- a/en-GB.plg_system_k2redirector.ini
+++ b/en-GB.plg_system_k2redirector.ini
@@ -4,5 +4,8 @@ PLG_SYSTEM_K2_REDIRECTOR_USER_VIEW_LABEL="K2 User/Author View"
 PLG_SYSTEM_K2_REDIRECTOR_SEARCH_VIEW_LABEL="K2 Search View"
 PLG_SYSTEM_K2_REDIRECTOR_TAG_VIEW_LABEL="K2 Tag View"
 PLG_SYSTEM_K2_REDIRECTOR_DATE_VIEW_LABEL="K2 Date View"
+PLG_SYSTEM_K2_REDIRECTOR_ITEM_VIEW_LABEL="K2 Item View"
 PLG_SYSTEM_K2_REDIRECTOR_SELECT_DESC="Select a menu item to redirect this view to. Leave it unchanged to not redirect this view"
 PLG_SYSTEM_K2_REDIRECTOR_NOT_REDIRECTED="Not redirected"
+PLG_SYSTEM_K2_REDIRECTOR_CATEGORIES_LABEL="Redirected Categories"
+PLG_SYSTEM_K2_REDIRECTOR_CATEGORIES_DESC="The K2 categories to redirect to the menu item selected in the K2 Category View parameter. Items belonging to these categories will be redirected to the K2 Item View when they are accessed directly."
